# lite.ai.toolkit.demo

./: README.md
android/: .gitignore
macos/: CMakeLists.txt  build.sh
macos/examples/: test_lite_yolov5.cpp
macos/litehub/include/ort/cv/: arcface_resnet.h
releases/macos/v0.1.0/: CMakeLists.txt
